--- a/index.old.html
+++ b/index.old.html
@@ -7,7 +7,7 @@
 --->
  <html>
 	<head>
-        <title>Iliyan | Home</title>
+        <title>Nicholas | Home</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,17 +29,15 @@
 				<!-- Header -->
 				<header id="header">
 				
-					<h1>Iliyan</h1>
-					<p>Student &nbsp;&bull;&nbsp; Developer &nbsp;&bull;&nbsp; Apple Fan &nbsp;&bull;&nbsp; I like cats too!</a></p>
-					<p><a href="http://blog.iliyan.me" target="_blank">Blog</a>  &nbsp;&bull;&nbsp; <a href="./work" target="_blank">Work</a> &nbsp;&bull;&nbsp; <a href="./pics" target="_blank">Photography</a></p>
-					</p>
+					<h1>Nicholas</h1>
+					<p>Student &nbsp;&bull;&nbsp; Apple Fan &nbsp;&bull;&nbsp; Mineman &nbsp;&bull;&nbsp; Potterhead</a></p>
+		<p>ur bad</p>
 					<nav>
 						<ul>
-							<li><a href="https://github.com/ili-codes" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="http://blog.iliyan.me" target="_blank" class="icon fa-rss"><span class="label">My blog</span></a></li>
-  						<li><a href="http://iliyan.me" target="_blank" class="icon fa-globe"><span class="label">My Website</span></a></li>
-  						<li><a href="http://pics.iliyan.me" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:hi@iliyan.me" target="_blank" class="icon fa-envelope-o"><span class="label">Email me</span></a></li>
+							<li><a href="https://github.com/vapelordnicholas" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="http://instagram.com/b.nicholas12" target="_blank" class="icon fa-instagram"><span class="label">My insta</span></a></li>
+  						<li><a href="http://vapelordnicholas.github.io" target="_blank" class="icon fa-globe"><span class="label">My Website</span></a></li>
+  						<li><a href="https://www.youtube.com/channel/UCYwL0_8gHNw3uDNUFGbtIPQ?view_as=subscriber" target="_blank" class="icon fa-youtube"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
 				</header>
@@ -48,7 +46,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<span class="copyright">&copy; Iliyan D. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>
+					<span class="copyright">&copy; Nick B. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>
 					</footer>
 		</div>
 	</div>
