--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul>
 							<li><a href="https://github.com/vapelordnicholas" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="http://instagram.com/b.nicholas12" target="_blank" class="icon fa-instagram"><span class="label">My insta</span></a></li>
-  						<li><a href="http://vapelordnicholas.github.io" target="_blank" class="icon fa-globe"><span class="label">My Website</span></a></li>
+  						<li><a href="https://discord.io/ggizi" target="_blank" class="icon fa-globe"><span class="label">My Website</span></a></li>
   						<li><a href="https://www.youtube.com/channel/UCYwL0_8gHNw3uDNUFGbtIPQ?view_as=subscriber" target="_blank" class="icon fa-youtube"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
