--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				
 					<h1>Nicholas</h1>
 					<p>Student &nbsp;&bull;&nbsp; Apple Fan &nbsp;&bull;&nbsp; Mineman &nbsp;&bull;&nbsp; Potterhead</a></p>
-		<p>ur bad</p>
+		<p>Ur Bad™</p>
 					<nav>
 						<ul>
 							<li><a href="https://github.com/vapelordnicholas" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
